modify animated navigation so that each link slides in and out independently of each other

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- overlay -->
+    <!-- Menu overlay -->
     <div class="overlay" id="overlay">
+      <!-- menu items -->
       <nav class="nav" id="nav">
         <ul class="ul">
-          <li class="nav-1 list"><a href="#home">Home</a></li>
-          <li class="nav-2 list"><a href="#about">About</a></li>
-          <li class="nav-3 list"><a href="#skills">Skills</a></li>
-          <li class="nav-4 list"><a href="#projects">Projects</a></li>
-          <li class="nav-5 list"><a href="#contact">Contact</a></li>
+          <li id="nav-1" class="list"><a href="#home">Home</a></li>
+          <li id="nav-2" class="list"><a href="#about">About</a></li>
+          <li id="nav-3" class="list"><a href="#skills">Skills</a></li>
+          <li id="nav-4" class="list"><a href="#projects">Projects</a></li>
+          <li id="nav-5" class="list"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
